git commit -m "first commit"

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Murtaza Ali Qazi</title>
-    <link rel="icon" type="image/x-icon" href="../assests/vulture Club.png" >
+    <link rel="icon" type="image/x-icon" href="../assests/logoname.png" >
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media-queries.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +20,7 @@
     <nav class="prim-color-bg text-light">
         <div class="container navbar flex">
             <a href="#home" class="logo">
-                <img src="../assests/Logo.svg" alt="">
+                <img src="../assests/logoname.png" alt="">
             </a>
             <div class="nav-links" id="nav-links">
                 <ul class="flex">
@@ -110,84 +110,6 @@
             </div>
         </div>
     </section>
-
-    <!-- Projects  section-->
-
-    <!-- <section class="project-section" id="myProject">
-        <div class="container ">
-            <h1>
-                My Projects
-            </h1>
-            <div class="project-card-area flex">
-                <div class="project-card">
-                    <div class="layer">
-                        <h3>
-                            UsabilityHub Clone
-                        </h3>
-                        <p style="color: #ffffff !important;">I cloned UsabilityHub for web development practice. The
-                            process was enriching, and I gained valuable skills and insights, enhancing my proficiency
-                            in web development.</p>
-                       <a href="https://drive.google.com/drive/folders/19D6BMiklAEFGXnKHnEB1qon8hELD1959?usp=sharing" target="_blank" class="secondary-btn">Download Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="layer">
-                        <h3>
-                            Shop me
-                        </h3>
-                        <p style="color: #ffffff !important;">"Shop Me" is a landing page designed by me for practice.
-                            It's a testament to my commitment to honing my web design skills, showcasing creativity and
-                            dedication.</p>
-                            <a href="https://drive.google.com/drive/folders/12oQGEkz412uFbYR3W0srIvIAjMpKHhqI?usp=sharing" target="_blank" class="secondary-btn">Download Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="layer">
-                        <h3>
-                            Desert Touring
-                        </h3>
-                        <p style="color: #ffffff !important;">LDesert Touring's landing page reflects my motto:
-                            minimalistic, user-friendly, and elegant. It offers an interactive, simple design, making it
-                            easy for users to explore and enjoy.</p>
-                            <a href="https://drive.google.com/drive/folders/1RjkSTs2C2kDtHHenxEvqmdeF6bav7q2X?usp=sharing" target="_blank" class="secondary-btn">Download Project</a>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <div class="layer">
-                            <h3>
-                            Social App
-                        </h3>
-                        <p style="color: #ffffff !important;">"Social Me" is a youth-centric landing page designed to
-                            captivate the younger generation. It offers a vibrant and engaging platform tailored to
-                            their interests and preferences.</p>
-                            <a href="https://drive.google.com/drive/folders/10RgbLMbnWueE0oJnexlFuwtIhyZYm-dr?usp=sharing" target="_blank" class="secondary-btn">Download Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="layer">
-                        <h3>
-                            Vulture Club
-                        </h3>
-                        <p style="color: #ffffff !important;">The "Vulture Club" concept logo symbolizes our future
-                            commitment to providing comprehensive digital solutions. It embodies innovation and
-                            adaptability, reflecting our dynamic approach to technology.</p>
-                            <a href="https://drive.google.com/file/d/1Cpr-JaVCx6Jx-e0e0nWqRf_kEVJMUQhS/view?usp=sharing" target="_blank" class="secondary-btn">Download Project</a>
-                    </div>
-                </div>
-                <div class="project-card">
-                    <div class="layer">
-                        <h3>
-                            Fun Store Studio
-                        </h3>
-                        <p style="color: #ffffff !important;">"Fun Store Studio," a user-friendly C program, simplifies
-                            bill generation and inventory management for shopkeepers. It offers an intuitive experience,
-                            streamlining daily operations effortlessly.</p>
-                            <a href="https://drive.google.com/drive/folders/1Lq1BQZR41PlAGYeP0-9lozlkpVsLgnJT?usp=sharing" target="_blank" class="secondary-btn">Download Project</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <!-- Contact Me  -->
 
